Reshuffle test order